Create two basic FRBC mocks and integrate s2 json schema format validator with websocket messages.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,3 +32,5 @@ typing-extensions==4.4.0
     #   starlette
 uvicorn==0.20.0
     # via -r ./requirements.in
+websockets==10.4
+    # via -r ./requirements.in
