add linter and fix

--- a/backend/requirements.in
+++ b/backend/requirements.in
@@ -1,4 +1,6 @@
-fastapi~=0.88.0
+fastapi~=0.92.0
 jsonschema~=4.17.3
+types-jsonschema~=4.17.0
 uvicorn~=0.20.0
 websockets~=10.4
+dataclass-wizard~=0.22.2
