--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ attrs==22.1.0
     # via jsonschema
 click==8.1.3
     # via uvicorn
-dataclass-wizard==0.22.2
+dataclass-wizard[yaml]==0.22.2
     # via -r ./requirements.in
 fastapi==0.92.0
     # via -r ./requirements.in
@@ -24,6 +24,8 @@ pydantic==1.10.2
     # via fastapi
 pyrsistent==0.19.2
     # via jsonschema
+pyyaml==6.0
+    # via dataclass-wizard
 sniffio==1.3.0
     # via anyio
 starlette==0.25.0
