--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,8 @@ pydantic==1.10.2
     # via fastapi
 pyrsistent==0.19.2
     # via jsonschema
+pytz==2023.3
+    # via -r ./requirements.in
 sniffio==1.3.0
     # via anyio
 starlette==0.22.0
