--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ anyio==3.6.2
     # via starlette
 attrs==22.1.0
     # via jsonschema
+bidict==0.22.1
+    # via -r ./requirements.in
 click==8.1.3
     # via uvicorn
 dataclass-wizard[yaml]==0.22.2
