--- a/backend/requirements.in
+++ b/backend/requirements.in
@@ -1,8 +1,9 @@
-fastapi~=0.92.0
+fastapi~=0.101.1
 jsonschema~=4.17.3
 types-jsonschema~=4.17.0
-uvicorn~=0.20.0
+uvicorn~=0.22.0
 websockets~=10.4
 pytz
 dataclass-wizard[yaml]~=0.22.2
-bidict ~= 0.22.1
+bidict~=0.22.1
+aiofiles~=23.2.1
