--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,16 +6,16 @@
 #
 aiofiles==23.2.1
     # via -r ./requirements.in
-annotated-types==0.5.0
-    # via pydantic
-anyio==3.7.1
+anyio==4.0.0
     # via starlette
 attrs==23.1.0
     # via jsonschema
 bidict==0.22.1
     # via -r ./requirements.in
 click==8.1.7
-    # via uvicorn
+    # via
+    #   s2-python
+    #   uvicorn
 dataclass-wizard[yaml]==0.22.2
     # via -r ./requirements.in
 fastapi==0.101.1
@@ -26,27 +26,30 @@ idna==3.4
     # via anyio
 jsonschema==4.17.3
     # via -r ./requirements.in
-pydantic==2.2.1
-    # via fastapi
-pydantic-core==2.6.1
-    # via pydantic
+pydantic==1.10.7
+    # via
+    #   fastapi
+    #   s2-python
 pyrsistent==0.19.3
     # via jsonschema
-pytz==2023.3
-    # via -r ./requirements.in
+pytz==2023.3.post1
+    # via
+    #   -r ./requirements.in
+    #   s2-python
 pyyaml==6.0.1
     # via dataclass-wizard
+s2-python==0.0.1
+    # via -r ./requirements.in
 sniffio==1.3.0
     # via anyio
 starlette==0.27.0
     # via fastapi
 types-jsonschema==4.17.0.10
     # via -r ./requirements.in
-typing-extensions==4.7.1
+typing-extensions==4.8.0
     # via
     #   fastapi
     #   pydantic
-    #   pydantic-core
 uvicorn==0.22.0
     # via -r ./requirements.in
 websockets==10.4
