First release: update README.md, dependencies and docker configuration.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 ENTRYPOINT []
 EXPOSE 8001/tcp
 
-RUN mkdir -p /app /app/logs /app/mounts
+RUN mkdir -p /app
 
 COPY ./requirements.txt     /app/s2_analyzer_backend/
 RUN pip3 install -r /app/s2_analyzer_backend/requirements.txt
@@ -11,5 +11,7 @@ RUN pip3 install -r /app/s2_analyzer_backend/requirements.txt
 COPY ./s2_analyzer_backend/ /app/s2_analyzer_backend/
 COPY ./docker_run.sh        /app/
 COPY ./deployment/          /app/
+
+WORKDIR /app/
 
 CMD ["/app/docker_run.sh"]
