--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "autoprefixer": "^9.8.6",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "react-draggable": "^4.4.6",
+    "react-terminal-ui": "^1.2.0",
+    "tailwindcss": "^3.4.1",
+    "terminal-in-react": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
