--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "autoprefixer": "^9.8.6",
     "chart.js": "^4.4.2",
+    "file-system-access": "^1.0.4",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
