--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   backend:
     image: s2-analyzer-backend
     build: ./
+    network_mode: "host"
     ports:
       - "8001:8001"
     volumes:
       - "./connection_histories/:/app/connection_histories/"
       - "./deployment/config.yaml:/app/config.yaml"
     environment:
-      LOG_LEVEL: info
-
+      LOG_LEVEL: debug
