--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,13 @@
     "react-draggable": "^4.4.6",
     "react-terminal-ui": "^1.2.0",
     "tailwindcss": "^3.4.1",
-    "terminal-in-react": "^4.3.1"
+    "terminal-in-react": "^4.3.1",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
