--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,19 +29,24 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.3",
     "typescript": "^5.4.5",
-    "vite": "^5.1.4"
+    "typescript-eslint": "^7.11.0",
+    "vite": "^5.2.12"
   }
 }
