Fixed issue that was causing hundreds of websockets to be opened
Each time a message was received on the frontend it caused a re-render
of Page, resulting in the websocket being re-opened. Therefore the
creation of the websocket was moved into a useEffect so now only one
connection is created.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,4 +14,6 @@ COPY ./deployment/          /app/
 
 WORKDIR /app/
 
-CMD ["/app/docker_run.sh"]
+ENV S2_ANALYZER_CONF=./config.yaml
+
+CMD ["python3","-m","s2_analyzer_backend.main"]
