Removed socket and cleaned up docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,12 @@ services:
     ports:
       - "8001:8001"
     environment:
-      LOG_LEVEL: debug
+      LOG_LEVEL: info
+
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "4173:4173"
+    depends_on:
+      - backend
