--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,32 +11,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/template": "^7.24.6",
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "autoprefixer": "^9.8.6",
-    "chart.js": "^4.4.2",
-    "file-system-access": "^1.0.4",
-    "postcss": "^8.4.35",
-    "postcss-cli": "^11.0.0",
+    "@types/wicg-file-system-access": "^2023.10.5",
+    "chart.js": "^4.4.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-terminal-ui": "^1.2.0",
-    "tailwindcss": "^3.4.1",
-    "terminal-in-react": "^4.3.1",
-    "ws": "^8.17.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
     "@eslint/js": "^9.3.0",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
@@ -44,8 +34,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.3.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.3",
-    "typescript": "^5.4.5",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^7.11.0",
     "vite": "^5.2.12"
   }
