--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.18",
     "@types/wicg-file-system-access": "^2023.10.5",
     "chart.js": "^4.4.7",
+    "material-react-table": "^3.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +38,6 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2",
     "typescript-eslint": "^7.11.0",
-    "vite": "^6.0.4"
+    "vite": "^5.4.11"
   }
 }
