--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   backend:
     image: s2-analyzer-backend
     build: ./backend
+    volumes:
+      - ./data:/app/data
     ports:
       - "8001:8001"
     environment:
