--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@types/wicg-file-system-access": "^2023.10.5",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "material-react-table": "^3.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
