--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/material": "^6.4.1",
     "@types/wicg-file-system-access": "^2023.10.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
@@ -20,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17"
   },
@@ -38,7 +42,7 @@
     "globals": "^15.3.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^7.11.0",
     "vite": "^5.4.11"
   }
