--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-draggable": "^4.4.6",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
@@ -33,7 +34,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@types/ws": "^8.5.13",
+    "@types/ws": "^8.5.14",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
