--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,7 @@
     "react-draggable": "^4.4.6",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.3",
-    "tailwindcss": "^3.4.17",
-    "uuid": "^11.0.5"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/compat": "^1.0.1",
